# hdu-homework

./: README.md
DataStruct/Exp1_JosephRing/: CMakeLists.txt  joseph.c  joseph.h  main.c  mylist.c  mylist.h
DataStruct/Exp2_Language/: CMakeLists.txt  Define.c  Parse.c  Translator.c  check.c  check.h  define.h  parse.h  queue.c  queue.h  stack.c  stack.h
DataStruct/Exp3_Huffman/: CMakeLists.txt  decoding.c  decoding.h  encoding.c  encoding.h  huffman.c  huffman.h  initialize.c  initialize.h  main.c  text.c  text.h  textprint.c  textprint.h  treeprint.c  treeprint.h  union_H.h
DataStruct/Exp3_Huffman/file/: CodeFile.txt  CodePrint.txt  TreeCodeFile.txt  hfmTree.txt  htmTree.txt
DataStruct/Exp4_School/: CMakeLists.txt  map.c  map.h  system.c  visitor.c  visitor.h
DataStruct/simapps/: 六角螺母扳手分析模型.ibe  扳手.txt
DataStruct/栈和队列/: StackandQueue1.c  StackandQueue1.cpp  StackandQueue2.c  StackandQueue2.cpp  StackandQueue3(nostl).cpp  StackandQueue3.cpp  StackandQueue4.c  test.c
DataStruct/矩阵/: 三元组顺序表加法.c  三元组顺序表加法.cpp
os/: CMakeLists.txt  main.c  myfs.c  myfs.h
程设/Chapter3/: answer.c
程设/Chapter4/: answer.c  第4章 简单房价预测项目的实验要求.docx
程设/Chapter5/: answer.c  data1.txt  第5章 鸢尾花分类项目实验的要求.docx
程设/Chapter6/: answer.c
程设/Chapter7/: 第7章 贪吃蛇游戏项目.docx  贪吃蛇.c  (+1 more)
英语作文/: Addiction on smartphones.docx  Evidence.docx  Happiness.docx  How to Keep on Good Terms with Roommates.docx  Merry Christmas.docx  SelfIntr.docx  Wealth of the Mind is the Only True Wealth.docx  Why is Sinology in vogue.docx  Will Online Class Replace Traditional Class.docx
面向对象/: P111-5无符号大数运算 - 修改.cpp
(+218 files in other folders)
